--- a/public/project/index.html
+++ b/public/project/index.html
@@ -2,7 +2,8 @@
 <html ng-app="WebAppMaker">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/textAngular.css" rel="stylesheet">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -10,6 +11,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/textAngular-rangy.min.js"></script>
     <script src="js/textAngular-sanitize.js"></script>
     <script src="js/textAngular.min.js"></script>
@@ -21,13 +26,9 @@
     <script src="views/user/register.controller.client.js"></script>
     <script src="views/user/profile.controller.client.js"></script>
     <script src="views/theme/theme.controller.client.js"></script>
-    <!--<script src="views/widget/widget.controller.client.js"></script>-->
-    <!--<script src="views/widget/widget-flickr-search.controller.client.js"></script>-->
     <script src="services/user.service.client.js"></script>
     <script src="services/theme.service.client.js"></script>
     <script src="services/snatch.service.client.js"></script>
-    <!--<script src="services/widget.service.client.js"></script>-->
-    <!--<script src="services/flickr.service.client.js"></script>-->
     <title>Project Home Page</title>
 </head>
 
