finish follow and unfollow users and themes functions

--- a/public/home.html
+++ b/public/home.html
@@ -6,7 +6,7 @@
     <link href="/project/css/style.css" rel="stylesheet">
     <title>Snatch Home Page</title>
 </head>
-<body id="home">
+<body class="homepage">
 <b>
     <h1>Snatch</h1>
     <h3>Seek your favorite style, and show your style ^^</h3>
