--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,12 @@
 <b>
     <h1>Snatch</h1>
     <h3>Seek your favorite style, and show your style ^^</h3>
-    <a class="links" href="project/index.html">Start here</a>
+    <div class="container-fluid row">
+        <a class="links" href="project/index.html">Start here</a>
+    </div>
+    <div class="container-fluid row">
+        <a class="links" href="project/index.html#/guest">Have a look first?</a>
+    </div>
 </b>
 <section>
     <img id="collage" src="project/images/collage.jpg">
