--- a/public/project/index.html
+++ b/public/project/index.html
@@ -23,6 +23,7 @@
     <script src="config.js"></script>
     <script src="views/snatch/snatch.controller.client.js"></script>
     <script src="views/admin/admin.controller.client.js"></script>
+    <script src="views/guest/guest.controller.client.js"></script>
     <script src="views/user/login.controller.client.js"></script>
     <script src="views/user/register.controller.client.js"></script>
     <script src="views/user/profile.controller.client.js"></script>
