adding walmart service

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -31,9 +31,9 @@
     <script src="services/user.service.client.js"></script>
     <script src="services/theme.service.client.js"></script>
     <script src="services/snatch.service.client.js"></script>
+    <script src="services/walmart.service.client.js"></script>
     <title>Project Home Page</title>
 </head>
-
 <body class="snatch">
 <div ng-view>
 </div>
