--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
 </head>
 <body class="homepage">
 <b>
-    <h1>SnatchIt</h1>
+    <h1>Snatch</h1>
     <h3>Seek your favorite style, and show your style ^^</h3>
     <div class="container-fluid row">
         <a class="links" href="project/index.html">Start here</a>
