--- a/public/home.html
+++ b/public/home.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/project/css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/icon" href="favicon.ico">
     <title>Snatch Home Page</title>
 </head>
 <body class="homepage">
