--- a/public/home.html
+++ b/public/home.html
@@ -21,5 +21,8 @@
 <section>
     <img id="collage" src="project/images/collage.jpg">
 </section>
+<div class="col-lg-12 text-center">
+    <p>Copyright © Snatch 2016</p>
+</div>
 </body>
 </html>
