--- a/public/home.html
+++ b/public/home.html
@@ -22,7 +22,7 @@
     <img id="collage" src="project/images/collage.jpg">
 </section>
 <div class="col-lg-12 text-center">
-    <p>©Copyright 2017. Cheryl Jia</p>
+    <p>©Copyright 2017. Snatch. Cheryl Jia</p>
 </div>
 </body>
 </html>
